# muuty.github.io

./: Makefile  config.toml  pyproject.toml
.github/workflows/: ci.yml  main.yml  static.yml
_pages/: _style.md  about.md  index.md
_pages/posts/: 2024-09-07-hello-world.md  first_post.md  second-post.md
_posts/: 2024-09-07-hello-world.md
content/post/: test-post.md
content/post/changmai-travel-journal/: changmai-travel-journal.md
content/post/chiangmai-travel-journal/: changmai-travel-journal.md
content/post/homecafe-history/: homecafe-history.md
content/posts/: test-post.md
pages/: _style.html  about.html  index.html  posts.html  style.css
pages/posts/: 2024-09-07-hello-world.html  first_post.html  second-post.html
public/: index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/post/: index.html  index.xml
public/post/changmai-travel-journal/changmai-travel-journal/: index.html
public/post/chiangmai-travel-journal/changmai-travel-journal/: index.html
public/post/homecafe-history/homecafe-history/: index.html
public/post/test-post/: index.html
public/tags/: index.html  index.xml
src/: builder.py  markdown_parser.py  scripts.py
src/elements/: page.py
src/markdowns/: elements.py  markdown_page.py  markdown_parser.py
src/templates/: header.html  page.html  post.html  posts.html  template.py
