[project]
name = "muuty-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "markdown>=3.7",
]

[tool.uv]
dev-dependencies = [
    "livereload>=2.7.0",
    "mypy>=1.11.2",
    "ruff>=0.6.4",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-markdown>=3.7.0.20240822",
]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
exclude = "tests"